# sonicast

./: .envrc.example  .gitignore  Cargo.toml  LICENSE
script/: start-mpd
src/: app.rs  log.rs  main.rs  player.rs  podcasts.rs  subsonic.rs  util.rs
src/app/: commands.rs  events.rs  helper.rs  types.rs
src/mpd/: mod.rs  protocol.rs  status.rs  types.rs
src/player/: commands.rs  events.rs  types.rs
src/subsonic/: types.rs
