[package]
name = "sonicast"
version = "0.1.0"
license = "AGPL-3.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-stream = "0.3.6"
axum = { version = "0.8", features = ["macros", "ws"] }
derive_more = { version = "2.0", features = ["from", "from_str", "display"] }
env_logger = "0.11.8"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", default-features = false, features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6", features = ["cors"] }
url = { version = "2.5", features = ["serde"] }
